--- a/app/views/tabi/index.html.erb
+++ b/app/views/tabi/index.html.erb
@@ -1,7 +1,7 @@
-<% if user_signed_in? %>
-	<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-<% else %>
-	<%= link_to "Sign in", new_user_session_path %><br />
-<% end %>
+<%# if user_signed_in? %>
+	<%#= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+<%# else %>
+	<%#= link_to "Sign in", new_user_session_path %><br />
+<%# end %>
 <%= react_component("index", props: @tabi_props, prerender: false) %>
 
