--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,10 @@
 
     <%= stylesheet_link_tag    'react-select', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag    'index', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag    'transitions_styles', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag    'transportation_styles', media: 'all', 'data-turbolinks-track': 'reload' %>
-
+    <%#= stylesheet_link_tag    'index', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%#= stylesheet_link_tag    'transitions_styles', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%#= stylesheet_link_tag    'transportation_styles', media: 'all', 'data-turbolinks-track': 'reload' %>
+   
     <%= stylesheet_link_tag    'font-awesome/css/font-awesome.min.css', media: 'all', 'data-turbolinks-track': 'reload' %>    
     <link href="https://fonts.googleapis.com/css?family=BioRhyme|Libre+Franklin:700i|Nunito+Sans" rel="stylesheet">
     <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
