change logic on landing page to get through logic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
    
     <%= stylesheet_link_tag    'font-awesome/css/font-awesome.min.css', media: 'all', 'data-turbolinks-track': 'reload' %>    
     <link href="https://fonts.googleapis.com/css?family=BioRhyme|Libre+Franklin:700i|Nunito+Sans" rel="stylesheet">
-    <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <%= favicon_link_tag 'Tabi_travel.png', sizes: "32x32" %>
 
 
 
